game-covers fixed
fixed height in game-covers

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -679,7 +679,7 @@ footer{
     }
 
     .games-cover {
-        min-height: 15rem;
+        min-height: 19rem;
     }
 
     .games-info {
@@ -760,7 +760,7 @@ footer{
     }
 
     .games-cover {
-        min-height: 13rem;
+        min-height: 16rem;
     }
 
     #pillars,
